--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts", "src/"]
 }
