--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "babel-eslint": "^10.1.0",
+    "craco": "^0.0.3",
+    "craco-alias": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
