--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,7 @@
     "paths": {
       "@common": ["./common"],
       "@common/*": ["./common/*"],
-      "@pages": ["./pages"]
+      "@Pages": ["./Pages"]
     }
   }
 }
