--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "craco-alias": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "typescript-plugin-css-modules": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
